--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,15 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!-- <a href="/sitemap/">Sitemap</a> -->
+
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?9961d550c8b7c6090693836f2f44cd75";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
+
 <!-- end custom footer snippets -->
